[package]
name = "templr_formatter"
version = "0.1.0"
description = "Formatter for the templr templates library"
homepage = "https://github.com/PizzasBear/templrfmt"
repository = "https://github.com/PizzasBear/templrfmt"
license = "Apache-2.0"
workspace = ".."
readme = "../README.md"
edition = "2021"

[dependencies]
proc-macro2 = { version = "1.0", default-features = false, features = [
    "span-locations",
] }
syn = { version = "2.0", default-features = false, features = [
    "full",
    "visit",
] }
templr_parser = "0.1"
quote = { version = "1.0", default-features = false }
regex = "1.10"
