[package]
name = "templrfmt"
version = "0.1.0"
description = "Formatter for the templr templates library"
homepage = "https://github.com/PizzasBear/templrfmt"
repository = "https://github.com/PizzasBear/templrfmt"
license = "Apache-2.0"
workspace = ".."
readme = "../README.md"
edition = "2021"

[dependencies]
templr_formatter = { path = "../templr_formatter", version = "0.1" }
rustfmt-wrapper = "0.2"
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
glob = "0.3"
